# loop_cli

./: Cargo.toml  README.md
.github/workflows/: auto-format.yml  ci.yml
src/: lib.rs  main.rs  tests.rs
