[package]
name = "loop_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Run commands across multiple directories"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "3.0"
loop_lib = { path = "../loop_lib" }
rayon = "1.7"
serde_json = "1.0"
walkdir = "2.3"

[[bin]]
name = "loop"
path = "src/main.rs"
